# vecBox

./: .gitignore  Cargo.toml  README.md
.github/actions/get-tag-name/: action.yml
.github/actions/linux-setup-cuda/: action.yml
.github/actions/windows-setup-cuda/: action.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  download.rs  logging.rs  main.rs  metrics.rs  tui.rs  utils.rs
src/api/: mod.rs  schema.rs  server.rs
src/models/: mod.rs  qwen3.rs  qwen3_vl.rs
