[package]
name = "vecBox"
version = "0.1.0"
edition = "2024"

[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]

[dependencies]
anyhow = { version = "1" }

image = { version = "0.25.2"}
fast_image_resize = { version = "6.0.0"}

serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }

unicode_categories = "0.1.1"

candle-nn = { version = "0.9.2", default-features = false }
candle-core = { version = "0.9.2", default-features = false }

safetensors = "0.4"

intel-mkl-src = { version = "0.8.1", optional = true }
accelerate-src = { version = "0.3.2", optional = true }

tokenizers = { version = "0.22.2" }

hf-hub = { version = "0.5.0" }

clap = { version = "4.5.60", features = ["derive"] }
dirs = "5"
