[package]
name = "vecBox"
version = "0.1.0"
edition = "2024"

[features]
default = ["cpu"]
cpu = []
cuda = ["vecbox-core/cuda"]
metal = ["vecbox-core/metal"]
accelerate = ["vecbox-core/accelerate"]
mkl = ["vecbox-core/mkl"]

[dependencies]
vecbox-core = { git = "https://github.com/alpaim/vecbox-core.git", tag = "v0.1.0" }

anyhow = { version = "1" }

image = { version = "0.25.2"}

serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }

base64 = "0.22.1"

clap = { version = "4.5.60", features = ["derive"] }
dirs = "5"

tokio = { version = "1.50.0", features = ["full"] }

axum = "0.8.8"

tower = "0.5.3"
tower-http = { version = "0.6", features = ["cors"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
